kube/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    component: backend
spec:
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      name: backend
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: ipakeev/words-backend:dev
          ports:
            - containerPort: 8000
              name: backend
          volumeMounts:
            - mountPath: /app/backend
              name: backend-code
      volumes:
        - name: backend-code
          hostPath:
            path: /dev/words/backend
