kube/backend/queue_handler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-queue-handler
  labels:
    component: backend-queue-handler
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: backend-queue-handler
  template:
    metadata:
      name: backend-queue-handler
      labels:
        component: backend-queue-handler
    spec:
      containers:
        - name: backend-queue-handler
          image: ipakeev/words-backend:dev
          command:
            - python
            - manage.py
            - get_words_from_bot
          volumeMounts:
            - mountPath: /app/backend
              name: backend-code
      volumes:
        - name: backend-code
          hostPath:
            path: /dev/words/backend
