kube/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    component: backend
spec:
  selector:
    component: backend
  ports:
    - port: 8000
      targetPort: backend
      name: backend
